--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+#container{
+	margin:20px;
+	
+}
+.before,.after{
+	color: #f00;
+	font-size:20px;
+	display:flex;
+	justify-content:inline;
+}
